--- a/swift/Dockerfile-4
+++ b/swift/Dockerfile-4
@@ -21,14 +21,14 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 # Install related packages and set LLVM 3.8 as the compiler
 RUN apt-get -q update && \
-    apt-get -q install -y \
+    DEBIAN_FRONTEND=noninteractive apt-get -q install -y \
     make \
     libc6-dev \
-    clang-3.8 \
+    clang-6.0 \
     curl \
     libedit-dev \
     libpython2.7 \
@@ -39,18 +39,20 @@ RUN apt-get -q update && \
     git \
     libcurl4-openssl-dev \
     pkg-config \
-    && update-alternatives --quiet --install /usr/bin/clang clang /usr/bin/clang-3.8 100 \
-    && update-alternatives --quiet --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.8 100 \
+    && update-alternatives --quiet --install /usr/bin/clang clang /usr/bin/clang-6.0 100 \
+    && update-alternatives --quiet --install /usr/bin/clang++ clang++ /usr/bin/clang++-6.0 100 \
     && rm -r /var/lib/apt/lists/*
 
 # Everything up to here should cache nicely between Swift versions, assuming dev dependencies change little
-ARG SWIFT_PLATFORM=ubuntu16.04
-ARG SWIFT_BRANCH=swift-4.1.3-release
-ARG SWIFT_VERSION=swift-4.1.3-RELEASE
+ARG SWIFT_PLATFORM=ubuntu18.04
+ARG SWIFT_BRANCH=swift-4.2-release
+ARG SWIFT_VERSION=swift-4.2-RELEASE
 
 ENV SWIFT_PLATFORM=$SWIFT_PLATFORM \
     SWIFT_BRANCH=$SWIFT_BRANCH \
-    SWIFT_VERSION=$SWIFT_VERSION
+    SWIFT_VERSION=$SWIFT_VERSION \
+    MINT_VERSION=$MINT_VERSION \
+    SWIFTLINT_VERSION=0.27.0
 
 # Download GPG keys, signature and Swift package, then unpack, cleanup and execute permissions for foundation libs
 RUN SWIFT_URL=https://swift.org/builds/$SWIFT_BRANCH/$(echo "$SWIFT_PLATFORM" | tr -d .)/$SWIFT_VERSION/$SWIFT_VERSION-$SWIFT_PLATFORM.tar.gz \
@@ -63,16 +65,12 @@ RUN SWIFT_URL=https://swift.org/builds/$SWIFT_BRANCH/$(echo "$SWIFT_PLATFORM" | 
       # 8513444E2DA36B7C1659AF4D7638F1FB2B2B08C4
       # uid           [ unknown] Swift Automatic Signing Key #2 <swift-infrastructure@swift.org>
           8513444E2DA36B7C1659AF4D7638F1FB2B2B08C4 \
-      # pub   4096R/91D306C6 2016-05-31 [expires: 2018-05-31]
-      #       Key fingerprint = A3BA FD35 56A5 9079 C068  94BD 63BC 1CFE 91D3 06C6
-      # uid                  Swift 3.x Release Signing Key <swift-infrastructure@swift.org>
-          A3BAFD3556A59079C06894BD63BC1CFE91D306C6 \
       # pub   4096R/71E1B235 2016-05-31 [expires: 2019-06-14]
       #       Key fingerprint = 5E4D F843 FB06 5D7F 7E24  FBA2 EF54 30F0 71E1 B235
       # uid                  Swift 4.x Release Signing Key <swift-infrastructure@swift.org>
           5E4DF843FB065D7F7E24FBA2EF5430F071E1B235 \
         ; do \
-          gpg --quiet --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
+          gpg --quiet --keyserver pgp.mit.edu --recv-keys "$key"; \
         done \
     && gpg --batch --verify --quiet swift.tar.gz.sig swift.tar.gz \
     && tar -xzf swift.tar.gz --directory / --strip-components=1 \
