--- a/hub/Dockerfile
+++ b/hub/Dockerfile
@@ -3,6 +3,9 @@ FROM gcr.io/cloud-builders/git
 ARG HUB_VERSION
 ARG HUB_SHA256SUM
 
+ARG HUB_CREDENTIAL_HELPER_VERSION
+ARG HUB_CREDENTIAL_HELPER_SHA256SUM
+
 RUN apt-get update && \
     apt-get install -y wget && \
     rm -rf /var/lib/apt/lists/* && \
@@ -12,6 +15,11 @@ RUN apt-get update && \
     rm hub-linux-amd64-${HUB_VERSION}.tgz && \
     mv hub-linux-amd64-${HUB_VERSION}/bin/hub /usr/bin/ && \
     chmod +x /usr/bin/hub && \
+    wget https://github.com/kelseyhightower/hub-credential-helper/releases/download/${HUB_CREDENTIAL_HELPER_VERSION}/hub-credential-helper-linux-amd64-${HUB_CREDENTIAL_HELPER_VERSION}.tgz && \
+    echo "${HUB_CREDENTIAL_HELPER_SHA256SUM} hub-credential-helper-linux-amd64-${HUB_CREDENTIAL_HELPER_VERSION}.tgz" > checksum && sha256sum -c checksum && \
+    tar xzvf hub-credential-helper-linux-amd64-${HUB_CREDENTIAL_HELPER_VERSION}.tgz && \
+    rm hub-credential-helper-linux-amd64-${HUB_CREDENTIAL_HELPER_VERSION}.tgz && \
+    mv hub-credential-helper /usr/local/bin/ && \
     alias git=hub
 
 ENTRYPOINT ["/usr/bin/hub"]
