--- a/hub/cloudbuild.yaml
+++ b/hub/cloudbuild.yaml
@@ -10,11 +10,17 @@ steps:
     - 'HUB_VERSION=${_HUB_VERSION}'
     - '--build-arg'
     - 'HUB_SHA256SUM=${_HUB_SHA256SUM}'
+    - '--build-arg'
+    - 'HUB_CREDENTIAL_HELPER_VERSION=${_HUB_CREDENTIAL_HELPER_VERSION}'
+    - '--build-arg'
+    - 'HUB_CREDENTIAL_HELPER_SHA256SUM=${_HUB_CREDENTIAL_HELPER_SHA256SUM}'
     - '.'
 
 substitutions:
   _HUB_VERSION: 2.5.1
   _HUB_SHA256SUM: eee7cb455e1ab34aa3b1eb4afe0f44a31af70cf4d3289fad4e124c7c0cc7016d
+  _HUB_CREDENTIAL_HELPER_VERSION: 0.0.1
+  _HUB_CREDENTIAL_HELPER_SHA256SUM: 5910a45daf225bde60aa4c3e9f8989334a3d846607f7a763a0d5030c037ff17c
 
 images:
   - 'gcr.io/$PROJECT_ID/hub:latest'
