--- a/packer/Dockerfile
+++ b/packer/Dockerfile
@@ -30,7 +30,9 @@ RUN echo "${PACKER_VERSION_SHA256SUM} packer_${PACKER_VERSION}_linux_amd64.zip" 
 
 FROM ubuntu:18.04
 RUN apt-get -y update && \
-    apt-get -y install ca-certificates && \
+    apt-get -y install ca-certificates software-properties-common && \
+    apt-add-repository --yes --update ppa:ansible/ansible && \
+    apt-get -y install ansible && \
     rm -rf /var/lib/apt/lists/*
 
 COPY --from=0 packer /usr/local/bin/packer
