Add git to the ansible build

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:18.04
 RUN apt-get -y update && \
-    apt-get -y install ca-certificates software-properties-common && \
+    apt-get -y install ca-certificates software-properties-common git && \
     apt-add-repository --yes --update ppa:ansible/ansible && \
     apt-get -y install ansible && \
     rm -rf /var/lib/apt/lists/*
