--- a/swift/Dockerfile-4
+++ b/swift/Dockerfile-4
@@ -50,9 +50,7 @@ ARG SWIFT_VERSION=swift-4.2.1-RELEASE
 
 ENV SWIFT_PLATFORM=$SWIFT_PLATFORM \
     SWIFT_BRANCH=$SWIFT_BRANCH \
-    SWIFT_VERSION=$SWIFT_VERSION \
-    MINT_VERSION=$MINT_VERSION \
-    SWIFTLINT_VERSION=0.27.0
+    SWIFT_VERSION=$SWIFT_VERSION
 
 # Download GPG keys, signature and Swift package, then unpack, cleanup and execute permissions for foundation libs
 RUN SWIFT_URL=https://swift.org/builds/$SWIFT_BRANCH/$(echo "$SWIFT_PLATFORM" | tr -d .)/$SWIFT_VERSION/$SWIFT_VERSION-$SWIFT_PLATFORM.tar.gz \
