--- a/swift/Dockerfile-4
+++ b/swift/Dockerfile-4
@@ -52,27 +52,20 @@ ENV SWIFT_PLATFORM=$SWIFT_PLATFORM \
     SWIFT_BRANCH=$SWIFT_BRANCH \
     SWIFT_VERSION=$SWIFT_VERSION
 
-# Download GPG keys, signature and Swift package, then unpack, cleanup and execute permissions for foundation libs
+# Copy the GPG key signatures
+# Originally from https://swift.org/keys/all-keys.asc as mentioned on https://swift.org/download/
+COPY all-keys.asc /tmp/all-keys.asc
+
+# Download Swift package, then unpack, cleanup and execute permissions for foundation libs
 RUN SWIFT_URL=https://swift.org/builds/$SWIFT_BRANCH/$(echo "$SWIFT_PLATFORM" | tr -d .)/$SWIFT_VERSION/$SWIFT_VERSION-$SWIFT_PLATFORM.tar.gz \
     && curl -fSsL $SWIFT_URL -o swift.tar.gz \
     && curl -fSsL $SWIFT_URL.sig -o swift.tar.gz.sig \
     && export GNUPGHOME="$(mktemp -d)" \
-    && set -e; \
-        for key in \
-      # pub   rsa4096 2017-11-07 [SC] [expires: 2019-11-07]
-      # 8513444E2DA36B7C1659AF4D7638F1FB2B2B08C4
-      # uid           [ unknown] Swift Automatic Signing Key #2 <swift-infrastructure@swift.org>
-          8513444E2DA36B7C1659AF4D7638F1FB2B2B08C4 \
-      # pub   4096R/71E1B235 2016-05-31 [expires: 2019-06-14]
-      #       Key fingerprint = 5E4D F843 FB06 5D7F 7E24  FBA2 EF54 30F0 71E1 B235
-      # uid                  Swift 4.x Release Signing Key <swift-infrastructure@swift.org>
-          5E4DF843FB065D7F7E24FBA2EF5430F071E1B235 \
-        ; do \
-          gpg --quiet --keyserver pgp.mit.edu --recv-keys "$key"; \
-        done \
+    && gpg --import /tmp/all-keys.asc \
     && gpg --batch --verify --quiet swift.tar.gz.sig swift.tar.gz \
     && tar -xzf swift.tar.gz --directory / --strip-components=1 \
-    && rm -r "$GNUPGHOME" swift.tar.gz.sig swift.tar.gz \
+    && rm -r swift.tar.gz.sig swift.tar.gz \
+    && rm -rf "$GNUPGHOME" || true \
     && chmod -R o+r /usr/lib/swift
 
 # Print Installed Swift Version
